--- a/shareao.html
+++ b/shareao.html
@@ -31,18 +31,18 @@
     </style>
   </head>
   <body>
-    <h1>Send API request</h1>
+    <h1>WEB BUFF SHARE ẢO</h1>
     <form>
       <label for="token">Access Token:</label>
       <input type="text" id="token" required><br>
 
-      <label for="id">Facebook Page ID:</label>
+      <label for="id">ID POST:</label>
       <input type="text" id="id" required><br>
 
-      <label for="times">Number of requests:</label>
+      <label for="times">Số Lượng Share:</label>
       <input type="number" id="times" required><br>
 
-      <label for="delay">Delay between requests (in milliseconds):</label>
+      <label for="delay">Delay(0s):</label>
       <input type="number" id="delay" required><br>
 
       <input type="button" value="Start" onclick="start()"/>
